# mermaid-classifier

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  demo_confusion_matrix.py  environment.yml  pyproject.toml
.github/workflows/: lint.yml  release.yml  tests.yml
autoresearch/: autoresearch.py  program.md  results.tsv  telemetry.py
autoresearch/analyses/: 2.md  3.md  8.md
autoresearch/configs/: included_labels.csv  rollups.csv  sources.csv
autoresearch/experiment/: classifier.py  strategies.py  train_experiment.py  trainer.py
autoresearch/telemetry/: 1.md  15.md  2.md  7.md
core/: annotation.py  benthic_attributes.py  train.py  utils.py
docker/feature_extraction/: Dockerfile  entrypoint.sh
docker/jobs/: features-entrypoint.sh  features.Dockerfile  local_smoke.sh  training-entrypoint.sh  training.Dockerfile
docker/training/: Dockerfile  entrypoint.sh  local_smoke.sh
docs/: CLAUDE.md  Dockerfile  Makefile  README.md  balancing-experiments.md  dask_preprocessing.qmd  environment-doc.yml  feature_extraction_at_scale.md  mermaid_sagemaker.md  mlflow.md  read_pyspacer_results.qmd  training_at_scale.md  training_preprocessing_new_labels.qmd  workflow.md
docs/pyspacer/: 0032dba6_points.csv  annotation.md  train.md
docs/research/: hidden-layer-experiments.md
docs/superpowers/plans/: 2026-05-15-sagemaker-training-launcher.md  2026-06-17-portable-classifier-artifact.md  2026-06-19-parity-gate-hardening.md
docs/superpowers/specs/: 2026-05-09-autoresearch-harness-design.md  2026-05-15-sagemaker-training-launcher-design.md
mermaid_classifier/common/: README.md  benthic_attributes.py  csv_utils.py  duckdb_utils.py  plots.py
mermaid_classifier/coralnet/: manifest.py
mermaid_classifier/pyspacer/: README.md  __init__.py  _pipeline_utils.py  annotation.py  config.py  dataset.py  label_specs.py  materialized_data.py  metrics.py  mlflow_model.py  options.py  runner.py  settings.py  swap_monitor.py  torch_classifier.py  train.py  train_loop.py  trainer.py  utils.py
mermaid_classifier/pyspacer/inference/: __init__.py  export.py  head.py  loader.py
mermaid_classifier/pyspacer/metrics/: README.md  __init__.py  _context.py  _logging.py  _results.py  _taxonomy_helpers.py  calibration.py  classification.py  coordinator.py  cover.py  per_source.py  probability.py  ranking.py  registry.py  taxonomic.py
mermaid_classifier/sagemaker/: config.py  launcher_config.py
mermaid_classifier/training/label_transforms/: __init__.py  base.py  drop_rare.py  merge_rare.py  options.py  registry.py
mermaid_classifier/training/sample_weighting/: __init__.py  base.py  decomposed.py  effective_number.py  leaf_inverse.py  options.py  registry.py  tree_balanced.py
mermaid_classifier/training/subsample/: __init__.py  options.py  registry.py
notebooks/: nb_utils.py
pyspacer_example/: .env  example.ipynb
sagemaker/configs/coralnet_all_plus_mermaid/: training_config.yaml
sagemaker/configs/coralnet_top108_best/: rollups.csv  sources.csv  training_config.yaml
sagemaker/configs/coralnet_top108_full/: included_labels.csv  sources.csv  training_config.yaml
sagemaker/configs/example/: included_labels.csv  rollups.csv  sources.csv  training_config.yaml
sagemaker/runs/: coralnet-all-mermaid.yaml  coralnet-top108-full.yaml  example-processing.yaml  example-training.yaml  shrink-merge-top108-full.yaml
scripts/: build_coralnet_manifest.py  build_feature_bucket.py  classifier_train.py  evaluate_model.py  extract_reference_features.py  generate_report.py  generate_training_config.py  launch_feature_extraction_sagemaker.py  launch_processing.py  launch_training.py  launch_training_sagemaker.py  release_artifact.py  report_template.html.j2  sagemaker_train_entrypoint.py
sm_endpoint_example/: client.py
sm_endpoint_example/custom_image/: Dockerfile  webserver.py
src/: README.md  classify_coralnet_features.py
tests/: test_autoresearch.py  test_classifier_train.py  test_generate_training_config.py  test_launch_feature_extraction.py  test_release_artifact.py
tests/common/: test_csv_utils.py  test_duckdb_utils.py
tests/coralnet/: test_manifest.py  test_manifest_cli.py
tests/pyspacer/: _calibrated_model_fixture.py  metrics_test_helpers.py  npz_test_helpers.py  test_annotation_resolver.py  test_build_feature_bucket.py  test_dataset_manifest.py  test_generate_report.py  test_inference_decoupling.py  test_label_specs.py  test_materialized_data.py  test_metrics.py  test_metrics_calibration.py  test_metrics_classification.py  test_metrics_coordinator.py  test_metrics_cover.py  test_metrics_per_source.py  test_metrics_probability.py  test_metrics_ranking.py  test_metrics_taxonomic.py  test_metrics_taxonomy_helpers.py  test_mlflow_model.py  test_mlp_benchmark.py  test_pickle_free_training.py  test_portable_artifact.py  test_sklearn_pin.py  test_torch_classifier_normalization.py  test_train.py  test_train_loop.py  test_trainer.py  test_training_dataset_pipeline.py
tests/sagemaker/: __init__.py  test_config.py  test_config_manifest.py  test_entrypoint.py  test_launcher.py
tests/sagemaker_launcher/: __init__.py  test_config.py  test_entrypoint.py  test_launch_processing.py  test_launch_training.py  test_launcher_config.py
tests/training/test_label_transforms/: test_drop_rare.py  test_merge_rare.py  test_options.py  test_pipeline.py
tests/training/test_sample_weighting/: fakes.py  test_decomposed.py  test_effective_number.py  test_invariants.py  test_leaf_inverse.py  test_options.py  test_registry_contract.py  test_torch_classifier_integration.py  test_trainer_pipeline.py  test_tree_balanced.py
tests/training/test_subsample/: test_options.py  test_registry.py  test_subsample_in_duckdb.py
v1/: Dockerfile  Makefile  README.md
v1/docs/: Dockerfile  README.md  dask_preprocessing.qmd  environment-doc.yml  read_pyspacer_results.qmd  viz_gist.qmd
v1/src/: README.md  base.py  classify_coralnet_features.py  task.py
