[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mermaid-classifier"
version = "0.1a1"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "jinja2",
]

[tool.hatch.build.targets.wheel]
packages = ["mermaid_classifier"]

[project.optional-dependencies]
# Minimal deps to LOAD and RUN a trained classifier (inference / serving lanes).
# pyspacer transitively brings torch, torchvision, scikit-learn, Pillow, numpy,
# boto3. The TorchMLPClassifier in this package needs only numpy + torch, and
# importing it no longer triggers settings (the import side effect was removed),
# so the training-only settings deps (pydantic-settings, psutil) are NOT needed.
inference = [
    # Pinned to Release 0.14.0 (git hash b52acdb)
    "pyspacer==0.14.0",
    # Parity gate was proven against this sklearn; see PARITY_PROVEN_SKLEARN.
    # A bump can silently change CalibratedClassifierCV calibration semantics.
    "scikit-learn==1.5.2",
]
# Everything needed to TRAIN: the inference stack plus orchestration, metrics,
# data loading, and the settings layer.
training = [
    "mermaid-classifier[inference]",
    "beautifulsoup4",
    "duckdb",
    "matplotlib",
    "mlflow>=3",
    # MLflow requires pandas, so we might as well use it when convenient.
    "pandas",
    "psutil",
    "pyarrow",
    # python-dotenv by itself isn't explicit about what variable names it
    # accepts; pydantic-settings is more explicit and searches from cwd.
    "pydantic-settings",
    "s3fs",
    # pyspacer uses scikit-learn, but we also use it directly for metrics.
    # Pinned in lockstep with PARITY_PROVEN_SKLEARN (see inference extra).
    "scikit-learn==1.5.2",
]
jupyterlab = [
    "jupyterlab>=4.5.5",
    # For interactive matplotlib in JupyterLab. After installation, the
    # browser tab running JupyterLab must be hard-refreshed for this to
    # take effect.
    "ipympl",
]
