[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mermaid-classifier"
version = "0.1a1"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "jinja2",
]

[tool.hatch.build.targets.wheel]
packages = ["mermaid_classifier"]

[project.optional-dependencies]
pyspacer = [
    "beautifulsoup4",
    "duckdb",
    "matplotlib",
    "mlflow>=3",
    # Registers the 'arn:' URI scheme handler so MLflow can talk to a
    # SageMaker-managed MLflow App or Tracking Server via its ARN.
    "sagemaker-mlflow",
    "numpy",
    # MLflow requires pandas, so we might as well use it when convenient.
    "pandas",
    "psutil",
    "pyarrow",
    # The core API of pyspacer is still ever-changing, and classifier
    # compatibility can be tricky too, so specifying version is important.
    "pyspacer==0.14.0",
    # python-dotenv by itself isn't explicit about what variable
    # names it accepts.
    # python-decouple and pydantic-settings are more explicit.
    # The former searches for .env from __file__. The latter
    # searches from cwd, which seems more practical when settings
    # are in an installed package, which is our intended usage.
    "pydantic-settings",
    "pyyaml",
    "s3fs",
    # pyspacer uses scikit-learn, but we also use it directly for metrics.
    "scikit-learn",
    # torch is already a transitive dep via pyspacer, but we import it
    # directly in torch_classifier.py so declare it here too.
    "torch",
    # Transitive via pyspacer; pinning here lets [tool.uv.sources] redirect
    # it to the CPU index on Linux instead of pulling the CUDA wheel.
    "torchvision",
]
jupyterlab = [
    "jupyterlab>=4.5.5",
    # For interactive matplotlib in JupyterLab. After installation, the
    # browser tab running JupyterLab must be hard-refreshed for this to
    # take effect.
    "ipympl",
]
sagemaker = [
    "sagemaker>=2.0,<3.0",
]

# On Linux (i.e. the SageMaker training image) pull torch + torchvision from
# PyTorch's CPU wheel index. Without this, uv resolves them from PyPI which
# bundles the ~2GB CUDA runtime — we never use GPU at training time.
# Mac dev is unaffected: sys_platform != 'linux' falls through to PyPI, whose
# macOS wheels are already CPU/MPS-only.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[dependency-groups]
sagemaker = []
