[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mermaid-classifier"
version = "0.1a1"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "jinja2",
]

[tool.hatch.build.targets.wheel]
packages = ["mermaid_classifier"]

[project.optional-dependencies]
# Minimal deps to LOAD and RUN a trained classifier (inference / serving lanes).
# pyspacer transitively brings torch, torchvision, scikit-learn, Pillow, numpy,
# boto3. The TorchMLPClassifier in this package needs only numpy + torch, and
# importing it no longer triggers settings (the import side effect was removed),
# so the training-only settings deps (pydantic-settings, psutil) are NOT needed.
inference = [
    # Pinned to Release 0.14.0 (git hash b52acdb)
    "pyspacer==0.14.0",
    # Parity gate was proven against this sklearn; see PARITY_PROVEN_SKLEARN.
    # A bump can silently change CalibratedClassifierCV calibration semantics.
    "scikit-learn==1.5.2",
]
# Everything needed to TRAIN: the inference stack plus orchestration, metrics,
# data loading, and the settings layer.
training = [
    "mermaid-classifier[inference]",
    "beautifulsoup4",
    "duckdb",
    "matplotlib",
    "mlflow>=3",
    # Registers the 'arn:' URI scheme handler so MLflow can talk to a
    # SageMaker-managed MLflow App or Tracking Server via its ARN.
    "sagemaker-mlflow",
    "numpy",
    # MLflow requires pandas, so we might as well use it when convenient.
    "pandas",
    "psutil",
    "pyarrow",
    # python-dotenv by itself isn't explicit about what variable names it
    # accepts; pydantic-settings is more explicit and searches from cwd.
    "pydantic-settings",
    "pyyaml",
    "s3fs",
    # pyspacer uses scikit-learn, but we also use it directly for metrics.
    # Pinned in lockstep with PARITY_PROVEN_SKLEARN (see inference extra).
    "scikit-learn==1.5.2",
    # torch is already a transitive dep via pyspacer, but we import it
    # directly in torch_classifier.py so declare it here too. Declaring it
    # directly is also required for the [tool.uv.sources] CPU-wheel redirect
    # below (uv only applies sources to direct deps).
    "torch",
    # Transitive via pyspacer; pinning here lets [tool.uv.sources] redirect
    # it to the CPU index on Linux instead of pulling the CUDA wheel.
    "torchvision",
]
jupyterlab = [
    "jupyterlab>=4.5.5",
    # For interactive matplotlib in JupyterLab. After installation, the
    # browser tab running JupyterLab must be hard-refreshed for this to
    # take effect.
    "ipympl",
]
sagemaker = [
    "sagemaker>=2.0,<3.0",
]

# On Linux (i.e. the SageMaker training image) pull torch + torchvision from
# PyTorch's CPU wheel index. Without this, uv resolves them from PyPI which
# bundles the ~2GB CUDA runtime — we never use GPU at training time.
# Mac dev is unaffected: sys_platform != 'linux' falls through to PyPI, whose
# macOS wheels are already CPU/MPS-only.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["v1"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RET", "SIM", "PD"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# AWS-bootstrap code must run before mermaid_classifier imports (settings read env at import time)
"scripts/build_feature_bucket.py" = ["E402"]
"scripts/classifier_train.py" = ["E402"]
# sys.path manipulation to import from scripts/ must precede the import itself
"tests/sagemaker_launcher/test_launch_processing.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["mermaid_classifier"]

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["mermaid_classifier", "scripts"]
exclude = ["v1", "tests", "**/.venv", "**/__pycache__"]
reportMissingTypeStubs = false
# Disable the basedpyright-only aggressive tier layered on top of upstream
# pyright "strict" — too noisy for a torch/numpy/duckdb/mlflow codebase.
# (See design doc; signed off as out of scope.)
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportImplicitStringConcatenation = false
reportUnusedParameter = false
# Untyped-dependency leakage: torch/pyspacer/duckdb/mlflow/sklearn ship no
# stubs, so their return values propagate as Unknown. Enforcing these would be
# ~1,400 noise-only ignores. Real-bug checks and own-signature annotation
# requirements stay ON. (Pragmatic-strict decision — see plan Global Constraints.)
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false

[dependency-groups]
sagemaker = []
lint = [
    "ruff",
    "basedpyright",
]
